# defect-detection-protonet

./: .gitattributes  .gitignore  .gitmodules  README.markdown
code/: CMakeLists.txt  attention.cpp  attention.hpp  clean_rename.bat  dataset.cpp  dataset.hpp  inference.bat  losses.cpp  losses.hpp  main.cpp  modules.cpp  modules.hpp  prnet.cpp  prnet.hpp  prototype.cpp  prototype.hpp  pt_builder.bat  utils.cpp  utils.hpp
extra/: libtorch.bat
res/1/ng/: Image_20240923161135883_rst.txt  Image_20240923161158459_rst.txt  Image_20240923161232938_rst.txt  Image_20240923161253544_rst.txt  Image_20240923161314397_rst.txt  Image_20240923161339178_rst.txt  Image_20240923161356263_rst.txt  Image_20240923161501497_rst.txt  Image_20240923161529183_rst.txt  Image_20240923161602308_rst.txt  Image_20240923161622312_rst.txt  Image_20240923161655332_rst.txt  Image_20240923161715069_rst.txt  Image_20240923161755977_rst.txt  Image_20240923161843804_rst.txt  Image_20240923161906993_rst.txt  Image_20240923161954088_rst.txt  Image_20240923162032786_rst.txt  Image_20240923162059919_rst.txt  Image_20240923162154670_rst.txt  Image_20240923162233567_rst.txt  Image_20240923162302202_rst.txt  Image_20240923162329968_rst.txt
res/1/ok/: Image_20240921105219064_rst.txt
res/10/ng/: Image_20240921150544318_rst.txt  Image_20240923143043239_rst.txt  Image_20240923143614193_rst.txt  Image_20240923143932567_rst.txt  Image_20240923144109716_rst.txt  Image_20240923144123149_rst.txt  Image_20240923144155676_rst.txt  Image_20240923144158452_rst.txt  Image_20240923144206809_rst.txt  Image_20240923144209263_rst.txt  Image_20240923144231290_rst.txt  Image_20240923144236563_rst.txt  Image_20240923144249380_rst.txt  Image_20240923144306605_rst.txt  Image_20240923144323316_rst.txt  Image_20240923144335888_rst.txt  Image_20240923144414780_rst.txt  Image_20240923144516575_rst.txt  Image_20240923144518980_rst.txt  Image_20240923144541064_rst.txt  Image_20240923144635147_rst.txt  Image_20240923144706349_rst.txt  Image_20240923144718948_rst.txt  Image_20240923144736404_rst.txt  Image_20240923144755274_rst.txt  Image_20240923144826308_rst.txt  Image_20240923144840421_rst.txt  Image_20240923144853368_rst.txt  Image_20240923144856247_rst.txt  Image_20240923144907521_rst.txt  (+3 more)
(+276 files in other folders)
